--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">PropHub</div>
         <div class="nav-links">
             <a href="index.html" class="active">Home</a>
-            <a href="properties.html">Properties</a>
+            <a href="properties.html">Zameen</a>
             <a href="sell.html">Sell/Rent Property</a>
             <div class="auth-buttons">
                 <a href="signin.html" class="btn-signin">Sign In</a>
@@ -28,8 +28,8 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1>Find Your Dream Property</h1>
-            <p>Discover thousands of properties for sale and rent</p>
+            <h1>Find Your Destination Property</h1>
+            <p>Discover hundreds of properties for sale and rent</p>
             <div class="search-container">
                 <div class="search-row">
                     <div class="search-group">
