--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="nav-links">
             <a href="index.html" class="active">Home</a>
             <a href="properties.html">Properties</a>
+            <a href="dasboard.html">Calender</a>
             <a href="sell.html">Sell/Rent Property</a>
             <div class="auth-buttons">
                 <a href="signin.html" class="btn-signin">Sign In</a>
